--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
                     <a class="nav-link active margin-nav" aria-current="page" href="#">Home</a>
                     <a class="nav-link margin-nav" href="#">Sobre nós</a>
                     <a class="nav-link margin-nav" href="#">Produtos</a>
-                    <a class="nav-link margin-nav">Fale conoscoWWWWWWWWWW</a>
+                    <a class="nav-link margin-nav">Fale conosco</a>
                 </div>
             </div>
         </div>
