--- a/html/index.html
+++ b/html/index.html
@@ -10,26 +10,23 @@
     <title></title>
 </head>
 <body>
-    <nav class="navb navbar navbar-expand-lg">
+    <!--HEADER-->
+    <nav class="navb navbar navbar-toggler navbar-expand-lg">
         <div class="container-fluid margin-nav">
-            <a href="#" style="width: 60px; height: 60px;">
-                <img src="../img/icon_hopebooks.png" width="60px" height="60px">
+            <a class="nav-" href="#" style="width: 80px; height: 80px;">
+                <img class="icon-border" src="../img/icon_hopebooks.png" width="80px" height="80px">
             </a>
-            <a class="navbar-brand icon-title" href="#">Hope Books</a>
+            <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
             <div class="collapse navbar-collapse nav-position" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active margin-nav" aria-current="page" href="#">Home</a>
-                    <a class="nav-link margin-nav" href="#">Sobre nós</a>
-                    <a class="nav-link margin-nav" href="#">Produtos</a>
-                    <a class="nav-link margin-nav">Fale conosco</a>
+                    <a class="nav-link margin-nav nav-color" href="#">Home</a>
+                    <a class="nav-link margin-nav nav-color" href="#">Sobre nós</a>
+                    <a class="nav-link margin-nav nav-color" href="#">Produtos</a>
+                    <a class="nav-link margin-nav nav-color" href="#">Fale conosco</a>
                 </div>
             </div>
         </div>
     </nav>
-
-
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
