navbar + sobre nós

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <nav class="navb navbar navbar-toggler navbar-expand-lg">
         <div class="container-fluid margin-nav">
             <a class="nav-" href="#" style="width: 80px; height: 80px;">
-                <img class="icon-border" src="../img/icon_hopebooks.png" width="80px" height="80px">
+                <img src="../img/icon_hopebooks.png" width="80px" height="80px">
             </a>
             <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
             <div class="collapse navbar-collapse nav-position" id="navbarNavAltMarkup">
