--- a/html/index.html
+++ b/html/index.html
@@ -11,23 +11,60 @@
 </head>
 <body>
     <!--HEADER-->
-    <nav class="navb navbar navbar-toggler navbar-expand-lg">
+    <nav class="navb navbar nav-position navbar-expand-lg nav-index">
         <div class="container-fluid margin-nav">
-            <a class="nav-" href="#" style="width: 80px; height: 80px;">
-                <img src="../img/icon_hopebooks.png" width="80px" height="80px">
-            </a>
-            <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
-            <div class="collapse navbar-collapse nav-position" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link margin-nav nav-color" href="#">Home</a>
-                    <a class="nav-link margin-nav nav-color" href="#">Sobre nós</a>
-                    <a class="nav-link margin-nav nav-color" href="#">Produtos</a>
-                    <a class="nav-link margin-nav nav-color" href="#">Fale conosco</a>
-                </div>
-            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle-navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>   
+            <div class="collapse navbar-collapse nav-position" id="navbarScroll">
+                <ul class="nav navbar-nav navbar-nav-scroll nav-position">
+                    <li class="nav-item">   
+                        <a class="nav-link margin-nav nav-color" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link margin-nav nav-color" href="#">Fale conosco</a>
+                    </li>   
+                    <li class="nav-item">
+                        <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link margin-nav nav-color" href="#">Sobre nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link margin-nav nav-color" href="#">Produtos</a>
+                    </li>
+                </ul>
+              </div>
         </div>
     </nav>
 
+    <div class="video box-img container-index d-flex justify-content-evenly align-items-center container-fluid">
+        <img src="../img/icon_hopebooks.png" class="img-fluid col-md-4">
+        <div class="col-md-5 ms-5">
+            <p class="lead lh-base text-center ms-4 videoparagrafo">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                and scrambled it to make a type specimen book.
+            </p>
+        </div>
+    </div>
+
+    <div class="container-fluid container">
+        <button class="arrow-left control nav-color" aria-label="Previous image"> < </button>
+        <button class="arrow-right control nav-color" aria-label="Next Image"> > </button>
+        <div class="gallery-wrapper">
+          <div class="gallery">
+            <img src="https://source.unsplash.com/random/250x250/?beach" alt="Beach Image" class="item current-item">
+            <img src="https://source.unsplash.com/random/250x250/?animal" alt="Animal Image" class="item current-item">
+            <img src="https://source.unsplash.com/random/250x250/?street" alt="Street Image" class="item current-item">
+            <img src="https://source.unsplash.com/random/250x250/?zoo" alt="Zoo Image" class="item current-item">
+            <img src="https://source.unsplash.com/random/250x250/?model" alt="Model Image" class="item current-item">
+          </div>
+        </div>
+      </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="../js/carousel-index.js"></script>
 </body>
 </html>
