--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
             <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
             <div class="collapse navbar-collapse nav-position" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link margin-nav nav-color" href="#">Home</a>
-                    <a class="nav-link margin-nav nav-color" href="#">Sobre nós</a>
+                    <a class="nav-link margin-nav nav-color" href="index.html">Home</a>
+                    <a class="nav-link margin-nav nav-color" href="sobre_nos.html">Sobre nós</a>
                     <a class="nav-link margin-nav nav-color" href="#">Produtos</a>
                     <a class="nav-link margin-nav nav-color" href="#">Fale conosco</a>
                 </div>
