--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -17,17 +17,17 @@
     <nav class="navb navbar navbar-expand-lg">
         <div class="container-fluid margin-nav">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle-navigation">
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle-navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>   
+            </button>
             <div class="collapse navbar-collapse nav-position" id="navbarScroll">
                 <ul class="nav navbar-nav navbar-nav-scroll nav-position">
-                    <li class="nav-item">   
+                    <li class="nav-item">
                         <a class="nav-link margin-nav nav-color" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link margin-nav nav-color" href="#">Fale conosco</a>
-                    </li>   
+                    </li>
                     <li class="nav-item">
                         <a class="navbar-brand icon-title nav-color" href="#">Hope Books</a>
                     </li>
@@ -38,40 +38,66 @@
                         <a class="nav-link margin-nav nav-color" href="#">Produtos</a>
                     </li>
                 </ul>
-              </div>
+            </div>
         </div>
     </nav>
-<!--Body-->
-<main>
-<div class="d-flex justify-content-center parte1">
-    <div class="col-md-5 ms-5">
-      <h2 class="featurette-heading fw-normal lh-1">Olá! Seja Bem-vindo(a) ao Mary's Sorrows!</h2>
-      <p class="lead lh-base text-center ms-4">"A violência doméstica e familiar contra a mulher é considerada como
-        qualquer ação ou omissão baseada no gênero feminino que lhe cause morte, lesão, sofrimento físico, sexual ou
-        psicológico e dano moral ou patrimonial", <a class="tjpr"
-           href="https://www.tjpr.jus.br/web/cevid/violencia-domestica">TJPR</a>.</p>
-      <p>O apoio é uma das maiores necessidades de uma mulher vítima de violência doméstica ao buscar ajuda. E nós do
-        Mary's Sorrows, fizemos este site para ajudar as mulheres que passam e já passaram por situções parecidas.</p>
-    </div>
-    <div class="col-md-5">
-      <img src="../img/icon_hopebooks.png" alt="" width="300"
-           class="image-fluid">
-    </div>
-</div>
+    <!--Body-->
+    <main>
+        <div class="d-flex justify-content-center parte1">
+            <div class="col-md-5 ms-5">
+                <h2 class="featurette-heading fw-normal lh-1 mt-5">Olá! Seja Bem-vindo(a) à Hope Books!</h2>
+                <p class="lead lh-base text-center ms-4 mt-5">"A violência doméstica e familiar contra a mulher é considerada
+                    como
+                    qualquer ação ou omissão baseada no gênero feminino que lhe cause morte, lesão, sofrimento físico,
+                    sexual ou
+                    psicológico e dano moral ou patrimonial", <a class="tjpr"
+                       href="https://www.tjpr.jus.br/web/cevid/violencia-domestica">TJPR</a>.</p>
+                <p>O apoio é uma das maiores necessidades de uma mulher vítima de violência doméstica ao buscar ajuda. E
+                    nós do
+                    Mary's Sorrows, fizemos este site para ajudar as mulheres que passam e já passaram por situções
+                    parecidas.</p>
+            </div>
+            <div class="col-md-5 ms-4">
+                <img src="../img/icon_hopebooks.png" alt="" width="400" class="image-fluid">
+            </div>
+        </div>
 
-<div class="video parte2 d-flex justify-content-evenly align-items-center container-fluid">
-<img src="../img/Vídeo.jpg" alt="video" class="img-fluid col-md-4">
-<div class="col-md-5 ms-5">
-    <p class="lead lh-base text-center ms-4 videoparagrafo">"A violência doméstica e familiar contra a mulher é considerada como
-        qualquer ação ou omissão baseada no gênero feminino que lhe cause morte, lesão, sofrimento físico, sexual ou
-        psicológico e dano moral ou patrimonial", <a class="tjpr"
-           href="https://www.tjpr.jus.br/web/cevid/violencia-domestica">TJPR</a>.</p>
-    <p class="videoparagrafo">O apoio é uma das maiores necessidades de uma mulher vítima de violência doméstica ao buscar ajuda. E nós do
-        Mary's Sorrows, fizemos este site para ajudar as mulheres que passam e já passaram por situções parecidas.</p>
-</div>
-</div>
+        <div class="video parte2 d-flex justify-content-evenly align-items-center container-fluid">
+            <img src="../img/Vídeo.jpg" alt="video" class="img-fluid col-md-4">
+            <div class="col-md-5 ms-5">
+                <p class="lead lh-base text-center ms-4 videoparagrafo">"A violência doméstica e familiar contra a
+                    mulher é considerada como
+                    qualquer ação ou omissão baseada no gênero feminino que lhe cause morte, lesão, sofrimento físico,
+                    sexual ou
+                    psicológico e dano moral ou patrimonial", <a class="tjpr"
+                       href="https://www.tjpr.jus.br/web/cevid/violencia-domestica">TJPR</a>.</p>
+                <p class="videoparagrafo">O apoio é uma das maiores necessidades de uma mulher vítima de violência
+                    doméstica ao buscar ajuda. E nós do
+                    Mary's Sorrows, fizemos este site para ajudar as mulheres que passam e já passaram por situções
+                    parecidas.</p>
+            </div>
+        </div>
 
-</main>
+
+        <div class="d-flex justify-content-around align-items-center container-fluid pgf">
+            <div class="mt-5">
+              <img class="rounded-circle" width="50" height="50" src="../img/icons8-binóculos-de-ópera-80.png" alt="">
+              <h2 class="fw-normal">Visão</h2>
+              <p>A visão de uma empresa é uma declaração que descreve a direção futura e o objetivo de longo prazo da empresa. Ela geralmente reflete a missão, os valores e a cultura da organização e deve ser inspiradora e desafiadora o suficiente para motivar os funcionários e orientar a tomada de decisões estratégicas.</p>
+            </div>
+            
+            <div class="mt-5">
+                <img class="rounded-circle" width="50" height="50" src="../img/icons8-objetivo-96.png" alt="">
+                <h2 class="fw-normal">Missão</h2>
+                <p>A missão de uma empresa é uma declaração que descreve o propósito fundamental e a razão de existir da organização. Ela geralmente reflete os valores, objetivos e crenças da empresa e orienta a tomada de decisões estratégicas e operacionais.</p>
+            </div>
+            <div class="mt-5">
+                <img class="rounded-circle" width="50" height="50" src="../img/icons8-justiça-96.png" alt="">
+                <h2 class="fw-normal">Valores</h2>
+                <p>Os valores de uma empresa são as crenças e princípios fundamentais que guiam o comportamento e as decisões dos funcionários e stakeholders da organização. Eles representam as qualidades e características que a empresa valoriza e promove em sua cultura e operações.</p>
+          </div>
+        </div>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
