--- a/html/index.html
+++ b/html/index.html
@@ -53,21 +53,21 @@
         </div>
     </div>
     
-    <div class="container-fluid">
-        <h1 class="title-main">Produtos em Destaque</h1>
-        <div class="container">
-            <button class="arrow-left control nav-color" aria-label="Previous image"> < </button>
-            <button class="arrow-right control nav-color" aria-label="Next Image"> > </button>
-            <div class="gallery-wrapper">
-                <div class="gallery">
-                    <img src="https://source.unsplash.com/random/250x250/?beach" alt="Beach Image" class="item current-item">
-                    <img src="https://source.unsplash.com/random/250x250/?animal" alt="Animal Image" class="item current-item">
-                    <img src="https://source.unsplash.com/random/250x250/?street" alt="Street Image" class="item current-item">
-                    <img src="https://source.unsplash.com/random/250x250/?zoo" alt="Zoo Image" class="item current-item">
-                    <img src="https://source.unsplash.com/random/250x250/?model" alt="Model Image" class="item current-item">
-                </div>
+    <div>
+      <h1 class="title-main">Produtos em Destaque</h1>
+      <div class="container">
+        <button class="arrow-left control nav-color" aria-label="Previous image"> < </button>
+        <button class="arrow-right control nav-color" aria-label="Next Image"> > </button>
+        <div class="gallery-wrapper">
+            <div class="gallery">
+                <img src="https://source.unsplash.com/random/250x250/?beach" alt="Beach Image" class="item current-item">
+                <img src="https://source.unsplash.com/random/250x250/?animal" alt="Animal Image" class="item current-item">
+                <img src="https://source.unsplash.com/random/250x250/?street" alt="Street Image" class="item current-item">
+                <img src="https://source.unsplash.com/random/250x250/?zoo" alt="Zoo Image" class="item current-item">
+                <img src="https://source.unsplash.com/random/250x250/?model" alt="Model Image" class="item current-item">
             </div>
         </div>
+      </div>
     </div>
     
     <!-- Footer -->
