--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
     
-    <div>
+    <div class="container-fluid">
       <h1 class="title-main">Produtos em Destaque</h1>
       <div class="container">
         <button class="arrow-left control nav-color" aria-label="Previous image"> < </button>
