--- a/html/index.html
+++ b/html/index.html
@@ -6,53 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon_hopebooks.png">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/nav-bar.css">
     <link rel="stylesheet" href="../fontawesome-free-6.3.0-web/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Hope Books</title>
 </head>
 <body>
     <!--HEADER-->
-    <nav class="navb navbar nav-position navbar-expand-lg nav-index">
-        <div class="container-fluid margin-nav">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle-navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>   
-            <div class="collapse navbar-collapse nav-position" id="navbarScroll">
-                <ul class="nav navbar-nav navbar-nav-scroll nav-position">
-                    <li class="nav-item">   
-                        <a class="nav-link margin-nav nav-color" href="../html/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/fale_conosco.html">Fale conosco</a>
-                    </li>   
-                    <li class="nav-item">
-                        <a class="navbar-brand icon-title nav-color" href="../html/index.html">Hope Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/sobre_nos.html">Sobre nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/produtos.html">Produtos</a>
-                    </li>
-                </ul>
-              </div>
-        </div>
+    <nav class="navbar">
+      <!-- LOGO -->
+      <div class="img"><img src="../img/icon_hopebooks.png" style="width: 100px; height: 100px;"></div>
+      <div class="logo">Hope Books</div>
+      <!-- NAVEGAÇÃO MENU -->
+        <ul class="nav-links">
+      <!-- CHECKBOX HACK -->
+          <input type="checkbox" id="checkbox_toggle" />
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <!-- NAVEGAÇÃO MENUS -->
+        <div class="menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/">Fale Conosco</a></li>
+          <li><a href="/">Sobre Nós</a></li>
+          <li><a href="/">Produtos</a></li>
+      </div>
+      </ul>
     </nav>
 
-    <div class="container-fluid">
-        <div class="video box-img container-index d-flex justify-content-evenly align-items-center">
-            <img src="../img/icon_hopebooks.png" class="img-fluid col-md-4">
-            <div class="col-md-5 ms-5">
-                <p class="lead lh-base text-center ms-4 videoparagrafo">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
-                    and scrambled it to make a type specimen book.
-                </p>
-            </div>
+    <div class="container-fluid video box-img container-index d-flex justify-content-evenly align-items-center">
+        <img src="../img/icon_hopebooks.png" class="img-fluid col-md-4">
+        <div class="col-md-5 ms-5">
+            <p class="lead lh-base text-center ms-4">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+                and scrambled it to make a type specimen book.
+            </p>
         </div>
     </div>
-    
+
     <div class="container-fluid">
       <h1 class="title-main">Produtos em Destaque</h1>
       <div class="container">
