--- a/html/fale_conosco.html
+++ b/html/fale_conosco.html
@@ -7,37 +7,31 @@
     <link rel="icon" href="../img/icon_hopebooks.png">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/fale_conosco.css">
+    <link rel="stylesheet" href="../css/nav-bar.css">
     <link rel="stylesheet" href="../fontawesome-free-6.3.0-web/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Fale Conosco</title>
+    <title>Hope Books - Fale Conosco</title>
 </head>
 <body>
-    <nav class="navb navbar nav-position navbar-expand-lg nav-index">
-        <div class="container-fluid margin-nav">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle-navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>   
-            <div class="collapse navbar-collapse nav-position" id="navbarScroll">
-                <ul class="nav navbar-nav navbar-nav-scroll nav-position">
-                    <li class="nav-item">   
-                        <a class="nav-link margin-nav nav-color" href="../html/index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/fale_conosco.html">Fale conosco</a>
-                    </li>   
-                    <li class="nav-item">
-                        <a class="navbar-brand icon-title nav-color" href="../html/index.html">Hope Books</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/sobre_nos.html">Sobre nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link margin-nav nav-color" href="../html/produtos.html">Produtos</a>
-                    </li>
-                </ul>
-              </div>
+
+    <!--HEADER-->
+    <nav class="navbar">
+      <!-- LOGO -->
+      <div class="img"><a href="../html/index.html"><img src="../img/icon_hopebooks.png" style="width: 100px; height: 100px;"></a></div>
+      <div class="logo"><a class="text-nav" href="../html/index.html">Hope Books</a></div>
+      <!-- NAVEGAÇÃO MENU -->
+        <ul class="nav-links">
+      <!-- CHECKBOX HACK -->
+          <input type="checkbox" id="checkbox_toggle" />
+          <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <!-- NAVEGAÇÃO MENUS -->
+        <div class="menu">
+          <li><a class="text-home" href="../html/index.html">Home</a></li>
+          <li><a href="../html/fale_conosco.html">Fale Conosco</a></li>
+          <li><a href="../html/sobre_nos.html">Sobre Nós</a></li>
+          <li><a href="../html/produtos.html">Produtos</a></li>
         </div>
+      </ul>
     </nav>
 
     <!--MAIN-->
