--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,12 @@
     <title>Hope Books</title>
 </head>
 <body>
+
     <!--HEADER-->
     <nav class="navbar">
       <!-- LOGO -->
-      <div class="img"><img src="../img/icon_hopebooks.png" style="width: 100px; height: 100px;"></div>
-      <div class="logo">Hope Books</div>
+      <div class="img"><a href="../html/index.html"><img src="../img/icon_hopebooks.png" style="width: 100px; height: 100px;"></a></div>
+      <div class="logo"><a class="text-nav" href="../html/index.html">Hope Books</a></div>
       <!-- NAVEGAÇÃO MENU -->
         <ul class="nav-links">
       <!-- CHECKBOX HACK -->
@@ -24,11 +25,11 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVEGAÇÃO MENUS -->
         <div class="menu">
-          <li><a href="/">Home</a></li>
-          <li><a href="/">Fale Conosco</a></li>
-          <li><a href="/">Sobre Nós</a></li>
-          <li><a href="/">Produtos</a></li>
-      </div>
+          <li><a class="text-home" href="../html/index.html">Home</a></li>
+          <li><a href="../html/fale_conosco.html">Fale Conosco</a></li>
+          <li><a href="../html/sobre_nos.html">Sobre Nós</a></li>
+          <li><a href="../html/produtos.html">Produtos</a></li>
+        </div>
       </ul>
     </nav>
 
