--- a/html/produtos.html
+++ b/html/produtos.html
@@ -51,6 +51,7 @@
                     <img src="https://source.unsplash.com/random/250x250/?animal" alt="Animal Image" class="item current-item">
                     <img src="https://source.unsplash.com/random/250x250/?street" alt="Street Image" class="item current-item">
                     <img src="https://source.unsplash.com/random/250x250/?zoo" alt="Zoo Image" class="item current-item">
+                    <img src="https://source.unsplash.com/random/250x250/?beach" alt="Beach Image" class="item current-item">
                 </div>
             </div>
         </div>
