--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVEGAÇÃO MENUS -->
         <div class="menu">
-          <li><a class="" href="../html/index.html">Home</a></li>
+          <li><a href="../html/index.html">Home</a></li>
           <li><a href="../html/fale_conosco.html">Fale Conosco</a></li>
           <li><a href="../html/sobre_nos.html">Sobre Nós</a></li>
           <li><a href="../html/produtos.html">Produtos</a></li>
@@ -33,23 +33,20 @@
       </ul>
     </nav>
 
-<div class="ms-2 inicio d-flex">
-        <div class="col-md-3 centralizarImg">
+<div class="inicio d-flex container-index">
+        <div class="col-md-3 centralizarImg box-img">
           <img src="../img/icon_hopebooks.png" class="img-fluid centralizarImg">
         </div>
         <div class="col-md-5 p-0 centralizarText">
-            <p class="lead lh-base text-center p-box">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
-                and scrambled it to make a type specimen book.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the 
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
-                and scrambled it to make a type specimen book.
-            </p>
+          <h2 class="text-center h2-index">Bem-vindo a Hope Books!</h2>
+          <h5 class="h5-index">
+            Aqui você encontrará projetos literários sobre o nosso bom Deus e sobre suas contribuições para com 
+            a humanidade!
+          </h5>
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid container-projects-index">
       <h1 class="title-main">Projetos em Destaque</h1>
       <div class="container">
         <button class="arrow-left control nav-color" aria-label="Previous image"> < </button>
