--- a/html/sobre_nos.html
+++ b/html/sobre_nos.html
@@ -28,7 +28,7 @@
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <!-- NAVEGAÇÃO MENUS -->
           <div class="menu">
-            <li><a class="" href="../html/index.html">Home</a></li>
+            <li><a href="../html/index.html">Home</a></li>
             <li><a href="../html/fale_conosco.html">Fale Conosco</a></li>
             <li><a href="../html/sobre_nos.html">Sobre Nós</a></li>
             <li><a href="../html/produtos.html">Produtos</a></li>
