--- a/html/produtos.html
+++ b/html/produtos.html
@@ -26,7 +26,7 @@
           <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVEGAÇÃO MENUS -->
         <div class="menu">
-          <li><a class="text-home" href="../html/index.html">Home</a></li>
+          <li><a href="../html/index.html">Home</a></li>
           <li><a href="../html/fale_conosco.html">Fale Conosco</a></li>
           <li><a href="../html/sobre_nos.html">Sobre Nós</a></li>
           <li><a href="../html/produtos.html">Produtos</a></li>
